deps/v8/test/message/invalid-spread.out
*%(basename)s:7: SyntaxError: Unexpected token ...
(x, ...y)
    ^^^
SyntaxError: Unexpected token ...
